--- a/Link.html
+++ b/Link.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Link</title>
+    <link rel="stylesheet" href="link.css">
 </head>
 <body>
     <h1 align="center"> Buna ziua tuturor.<br>Astazi invatam HTML</h1>
@@ -19,6 +20,11 @@
     <li>Locul <a href="Locuri.html">2</a></li>
     <li>Locul <a href="Locuri.html">3</a></li>
 </ol>
+<div>
+    <a href="cont.html">
+    <button >Inapoi</button>
+    </a>
+</div>
 
 </body>
 </html>
