--- a/Locuri.html
+++ b/Locuri.html
@@ -4,14 +4,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="locuri.css">
 </head>
 <body>
-    <ol> 
+    <div>
+     <ol> 
         <li>Locul 1- <b>Ion</b> </li>
         <li>Locul 2- <b>George</b> </li>
         <li>Locul 3- <b>Petru</b> </li>
-    </ol>
-    <table border="2" width="50%" align="center" >
+     </ol>
+    </div>
+    <div>
+     <table border="2" width="50%" align="center" >
         <caption> Punctajul acumulat de fiecare</caption>
         <thead>
             <th>Elevul</th></td>
@@ -26,6 +30,12 @@
             <td> 35/50 p </td>
         </tr>
         
-    </table>
+     </table>
+    </div>
+    <div>
+        <a href="Link.html">
+        <button >Inapoi</button>
+        </a>
+    </div>
 </body>
 </html>
