--- a/cont.html
+++ b/cont.html
@@ -4,29 +4,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inregistrare</title>
+    <link rel="stylesheet" href="cont.css">
 </head>
 <body>
 <div align="center">
     
     <h1>Completati spatiile de mai jos</h1>
-    <label for="color"></label>Culoarea preferata
-   <input type="color"> 
-    <br>
-    <br>
-<form action="">
-    <input type="submit">
-</form>
-    <label for="date"></label>Data de nastere
-    <input type="date">
-    <br><br>
-    <label for="name"></label>Nume de utilizator
-    <input type="text">
-    <br><br>
-    <label for="Pasword"></label>Parola
-    <input type="password">
-    <br>
-    <br>
-    <button type="button"> Gata</button>
+
 </div>
+
+
+<div>
+        <label for="color"></label>Culoarea preferata
+        <input type="color"> 
+        <br>
+        <br>
+        <label for="date"></label>Data de nastere
+        <input type="date">
+        <br><br>
+        <label for="name"></label>Nume de utilizator
+        <input type="text">
+        <br><br>
+        <label for="Pasword"></label>Parola
+        <input type="password">
+</div>
+
+
+<div>
+    <br>
+    <form action="Link.html" method="GET" >
+        <input type="submit">
+    </form>
+</div>
+
+<div>
+    <a href="index.html">
+    <button >Inapoi</button>
+    </a>
+</div>
+<footer>
+    Inregitrarea oaspetelui
+</footer>
+
 </body>
 </html>
