--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vlad Site</title>
+    <link rel="stylesheet" href="index.css">
 </head>
-<body align="center">
+<body align="center" >
+
+    <header>       
+      <h1> Acest site e facut de Botnari Vladimir</h1>
+    </header>
+
 <div>
-    <header>Acest site e facut de Botnari Vladimir</header>
+    <h2> <i> Primul meu site</i></h1>
+    <h3>Azi invat HTML</h2>
 </div>
-<div>
-    <h1> <i> Primul meu site</i></h1>
-    <h2>Azi invat HTML</h2>
+<div> 
+    <p>Totul merge foarte bine</p>
 </div>
-<div> <p>Totul merge foarte bine</p></div>
 <div>
     <p>Faceti click pe imagine pentru a va inregistra</p>
     <a href="cont.html">
@@ -23,10 +28,10 @@
     alt="Imagine">
     </a>
 </div>
-<div>
-    <footer>Verificat de Botnari Vladimir</footer>
-</div>
 
+<footer>
+    Verificat de Botnari Vladimir
+</footer>
 
 
 </body>
